--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ html {
 }
 
 body {
-	font-family: 'Avenir Next Condensed', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 15px;
 	letter-spacing: 0.5px;
 	line-height: 1.5;
@@ -56,7 +56,7 @@ ul li {
 
 a { 
 	text-decoration: none;
-	color: #fefefe;  
+	color: #2f2f2f;  
 }
 
 a:hover,
@@ -71,7 +71,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Avenir Next Condensed', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
 	margin-top: 0;
 }
@@ -267,7 +267,7 @@ button:focus {
 .navbar-default .navbar-brand:focus {
 	color: #fff;
 	font-size: 35px;
-	font-family: 'Avenir Next Condensed', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	margin-top: -5px;
 }
 
@@ -357,7 +357,7 @@ button:focus {
 	left: 0;
 	top: 0;
 	right: 0;
-	opacity: 0.75;
+	opacity: 0.92;
 }
 
 .mu-featured-slider-content {
@@ -723,7 +723,7 @@ button:focus {
 	        transform: scale(0);
 	-webkit-transition: all 0.5s;
 	transition: all 0.5s;
-	opacity: 0.75;
+	opacity: 0.9;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
 }
 
@@ -740,13 +740,13 @@ button:focus {
 }
 
 .mu-simplefilter li {
-	border: 10px;
+	border: 1px solid #ccc;
 	color: #333;
 	cursor: pointer;
 	display: inline-block;
 	text-transform: uppercase;
 	padding: 1rem 2rem;
-	margin: 0 10px;
+	margin: 0 5px;
 	-webkit-transition: all 0.5s;
 	transition: all 0.5s;
 	font-size: 15px;
@@ -1490,7 +1490,7 @@ button:focus {
 }
 
 .navbar1{
-	background-color: #000000;
+	background-color: #263882;
 	margin: 0px;
 }
 
