--- a/assets/css/theme-color/custom-theme.css
+++ b/assets/css/theme-color/custom-theme.css
@@ -1,6 +1,8 @@
 
+
+
 /*=======================================
-Template Design By MarkUps	
+Template Design By MarkUps  
 Author URI : http://www.markups.io/
 ========================================*/
 
@@ -10,9 +12,9 @@ Author URI : http://www.markups.io/
 .mu-simplefilter li:hover,
 .mu-simplefilter li.active,
 .mu-team-content-single:hover {
-	background: #4568DC;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #FFF7DE, #FDA2B8);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #FFF7DE, #FDA2B8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #FFF7DE;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #FFF7DE, #FFF7DE);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #FFF7DE, #FFF7DE); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .mu-heading-title>span,
@@ -23,7 +25,7 @@ Author URI : http://www.markups.io/
 .mu-testimonial-slide .slick-dots li.slick-active button::before,
 .mu-footer-area a:hover,
 .mu-footer-area a:focus {
-	color: #4568DC;
+  color: #bbb5a4;
 }
 
 .mu-send-msg-btn:hover,
@@ -31,17 +33,18 @@ Author URI : http://www.markups.io/
 .mu-about-icon-box,
 .mu-social-media a:hover,
 .mu-social-media a:focus {
-	border: 1px solid #4568DC;
-	color: #4568DC;
+  border: 1px solid #FFF7DE;
+  color: #FFF7DE;
 }
 
 .mu-testimonial-slide .slick-dots li button:hover,
 .mu-testimonial-slide .slick-dots li button:focus,
 .mu-testimonial-slide .slick-dots li.slick-active button {
-	background-color: #4568DC;
+  background-color: #FFF7DE;
 }
 
 .mu-contact-form .form-control:focus {
-	border: 1px solid #4568DC;    
+  border: 1px solid #FFF7DE;    
 } 
+
 
